# AI3_CR_Agent

./: .gitignore  README.md  pyproject.toml
examples/cases/python_null_guard/: diff.patch  pr_summary.md  repo_summary.md  review_rules.json  review_skills.json
examples/cases/python_null_guard/source_snapshot/service/: user_service.py
skills/custom_coding_conventions/: SKILL.md  skill.json
skills/security_review_companion/: SKILL.md  skill.json
src/ai3_cr_agent/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  server.py  skills.py
src/ai3_cr_agent/analysis/: __init__.py  batch_planner.py  change_summary.py  context_resolver.py  openai_review_client.py  review_agent.py  static_checks.py
src/ai3_cr_agent/domain/: __init__.py  models.py
src/ai3_cr_agent/parsers/: __init__.py  diff_parser.py
src/ai3_cr_agent/ui/: __init__.py  admin_generation_page.py  admin_input_page.py  issue_creation_page.py  issue_detail_page.py  issues_page.py  pr_review_page.py
tests/: test_batch_planner.py  test_context_resolver.py  test_diff_parser.py  test_pipeline.py
